@@ -10,6 +10,7 @@ Stability update for v0.9.9
 * New astrometric tool
 * Improved global registration and fixed a bug
 * Fixed crash on startup on Windows with a session owning a wide char
+* Fixed issue with wide chars on Windows
 
 v0.9.9, Jun 07, 2018
 Stability update for v0.9.8
