@@ -10,6 +10,7 @@ xxxxxxxx
 * New astrometric tool
 * Improved global registration and fixed a bug
 * Fixed crash on startup on Windows with a session owning a wide char
+* Fixed issue with wide chars on Windows
 
 siril 0.9.9
 06/07/18
